Adds testing and jar creation in build.gradle.kts. Fixes unused variables